Fixed the broken links

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </li>
 
                     <p>
-                        Our own <a href="./assets/css/style.css">style.css</a> file shows how we've designed the
+                        Our own <a href= "./assets/css/styles.css">style.css</a> file shows how we've designed the
                         page we're reading!
                     </p>
 
@@ -148,7 +148,7 @@
                 </div>
                 <div id="project3" class="projectGridArea">
                     <div class="grid-text">
-                        <a href="https://github.com/Marilena-C/day-twoClass_work-2_Furniture/" target="_blank">Furniture</a>
+                        <a href="https://github.com/Marilena-C/Furniture" target="_blank">Furniture</a>
                     </div>
                 </div>
             </section>
